--- a/index.html
+++ b/index.html
@@ -4,33 +4,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weather App</title>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <title>The Weather App</title>
   <link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <script defer src="/weather.js"></script>
 </head>
 
 <body>
-  <div class="card">
-    <div class="search">
-      <input type="text" class="search-bar" placeholder="Enter city">
-      <button>Search</button>
+  <div class="weather-card">
+    <div class="time" id="time"></div>
+    <div class="search-bar-container">
+      <input type="text" class="search-bar" placeholder="Type city here">
+      <button class="search-button">
+        <i class="material-icons">search</i>
+      </button>
     </div>
-    <div class="weather loading">
-      <h2 class="city">City Name</h2>
-      <h1 class="temp">--°C</h1>
-      <div class="flex">
-        <img id="weatherIcon" src="" alt="Weather Icon" class="icon" />
-        <div id="description" class="description">--</div>
-      </div>
-      <div id="humidity" class="humidity">Humidity: --%</div>
-      <div id="wind" class="wind">Wind speed: -- km/h</div>
+    <div class="weather-details loading">
+      <h2 class="city"></h2>
+      <h1 class="temp"></h1>
+      <div class="humidity"></div>
+      <div class="wind"></div>
+      <div class="description"></div>
     </div>
   </div>
-
-  <script src="./script.js" defer></script>
 </body>
 
 </html>
-
-
-
