added images for backgrounds and almost functional

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script defer src="/weather.js"></script>
 </head>
 
-<body>
+<body class="background">
   <div class="weather-card">
     <div class="time" id="time"></div>
     <div class="search-bar-container">
