implementation of background changes completed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <script defer src="/weather.js"></script>
 </head>
 
-<body class="background">
+<body>
+ <div class = "backgroundContainer">
   <div class="weather-card">
     <div class="time" id="time"></div>
     <div class="search-bar-container">
@@ -29,6 +30,7 @@
       <div class="description"></div>
     </div>
   </div>
+ </div>
 </body>
 
 </html>
