Added toggle option to convert from C to F. Changed background to display accurately.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
 </head>
 
 <body>
- <div class = "backgroundContainer">
+ <div class="backgroundContainer">
   <div class="weather-card">
     <div class="time" id="time"></div>
+
+
+    <div class="temperature-switch">
+      <label for="temperature-toggle"></label>
+      <input type="checkbox" id="temperature-toggle">
+      <label for="temperature-toggle">°C</label>
+    </div>
+
     <div class="search-bar-container">
       <input type="text" class="search-bar" placeholder="Type city here">
       <button class="search-button">
